Handle gtype marshalling

https://bugzilla.gnome.org/show_bug.cgi?id=749696